DuPont DevSB/src/objects/ccrz__E_RichContentI18N__c.object
<CustomObject>
    <fields>
        <fullName>ccrz__CCRichContent__c</fullName>
        <description>The rich content object that this translated content belongs to</description>
        <label>CC Rich Content</label>
        <referenceTo>ccrz__E_RichContent__c</referenceTo>
        <relationshipLabel>CC Rich Content I18Ns</relationshipLabel>
        <relationshipName>CCRichContentI18Ns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__Content__c</fullName>
        <description>The actual translated content to be displayed on the page</description>
        <label>Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__Locale__c</fullName>
        <description>The locale of this translated rich content. Localization follows the normal CloudCraze fallback rules.</description>
        <label>Locale</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CC Rich Content I18N</label>
    <nameField>
        <label>CC Rich Content I18N Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Rich Content I18Ns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>